@@ -2,6 +2,7 @@ package com.thanathip.training.backend.config;
 
 import com.thanathip.training.backend.config.token.TokenFilterConfigurer;
 import com.thanathip.training.backend.service.TokenService;
+import org.apache.catalina.filters.CorsFilter;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -12,14 +13,22 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Collections;
 import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
     private final TokenService tokenService;
-    String[] PUBLIC = new String[]{"/user/register", "/user/login","/actuator/**"};
+    private final String[] PUBLIC = {
+            "/user/register",
+            "/user/login",
+            "/actuator/**",
+            "/socket/**",
+            "/chat/**",
+    };
 
     public SecurityConfig(TokenService tokenService) {
         this.tokenService = tokenService;
@@ -32,13 +41,21 @@ public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain configure(HttpSecurity http) throws Exception {
-
         http.cors(config -> {
-            CorsConfiguration corsConfiguration = new CorsConfiguration();
-            corsConfiguration.setAllowedOrigins(List.of("*"));
-            corsConfiguration.setAllowedMethods(List.of("*"));
-            corsConfiguration.setAllowedHeaders(List.of("*"));
-            config.configurationSource(request -> corsConfiguration);
+            CorsConfiguration cors = new CorsConfiguration();
+            cors.setAllowCredentials(true);
+            cors.setAllowedOriginPatterns(Collections.singletonList("http://*"));
+            cors.addAllowedHeader("*");
+            cors.addAllowedMethod("GET");
+            cors.addAllowedMethod("POST");
+            cors.addAllowedMethod("PUT");
+            cors.addAllowedMethod("DELETE");
+            cors.addAllowedMethod("OPTIONS");
+
+            UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+            source.registerCorsConfiguration("/**", cors);
+
+            config.configurationSource(source);
         });
         http.sessionManagement(config -> {
             config.sessionFixation().none();
@@ -50,12 +67,12 @@ public class SecurityConfig {
         });
         http.authorizeHttpRequests(config -> {
             System.out.println("config = " + config);
-            config.requestMatchers(PUBLIC).anonymous()
-                    .anyRequest().authenticated();
+            config.requestMatchers(PUBLIC).anonymous().anyRequest().authenticated();
         }).apply(new TokenFilterConfigurer(tokenService));
 
         return http.build();
     }
+
 
 
 }
